<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">
  <data>

  </data>
  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".ui.login.LoginActivity">

    <Button
      android:id="@+id/login"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="64dp"
      android:layout_marginStart="48dp"
      android:layout_marginEnd="48dp"
      android:layout_gravity="start"
      android:paddingTop="@dimen/login_button_padding_top"
      android:paddingBottom="@dimen/login_button_padding_top"
      android:paddingStart="@dimen/login_button_padding_start"
      android:paddingEnd="@dimen/login_button_padding_start"
      android:background="@color/colorPrimary"
      android:backgroundTint="@color/colorPrimary"
      android:enabled="false"
      android:text="@string/action_login"
      android:textColor="@color/cast_expanded_controller_ad_in_progress_text_color"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/password" />
    <EditText
      android:id="@+id/password"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:layout_marginStart="24dp"
      android:layout_marginEnd="24dp"
      android:autofillHints="@string/prompt_password"
      android:fontFamily="@font/noto_sans"
      android:hint="@string/prompt_password"
      android:imeActionLabel="@string/action_login"
      android:imeOptions="actionDone"
      android:inputType="textPassword"
      android:selectAllOnFocus="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
      android:id="@+id/username"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="96dp"
      android:layout_marginStart="24dp"
      android:layout_marginEnd="24dp"
      android:autofillHints="@string/prompt_account"
      android:fontFamily="@font/noto_sans"
      android:hint="@string/prompt_account"
      android:inputType="textEmailAddress"
      android:selectAllOnFocus="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.53"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView3" />
    <ProgressBar
      android:id="@+id/loading"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="9dp"
      android:layout_marginBottom="64dp"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:layout_gravity="center"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/password"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="@+id/password"
      app:layout_constraintTop_toBottomOf="@+id/textView3"
      app:layout_constraintVertical_bias="0.05" />
    <TextView
      android:id="@+id/To_signup"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="2dp"
      android:layout_marginStart="8dp"
      android:fontFamily="@font/noto_sans"
      android:text="@string/action_sign_up"
      android:textColor="@android:color/holo_red_light"
      android:textSize="14sp"
      app:layout_constraintBottom_toBottomOf="@+id/textView4"
      app:layout_constraintStart_toEndOf="@+id/textView4"
      app:layout_constraintTop_toTopOf="@+id/textView4" />
    <TextView
      android:id="@+id/textView3"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="144dp"
      android:fontFamily="@font/noto_serif"
      android:text="@string/welcome_back"
      android:textSize="36sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
    <TextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="64dp"
      android:layout_marginEnd="54dp"
      android:text="@string/account_text"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/login" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>